--- a/src/app/components/home/home.styles.css
+++ b/src/app/components/home/home.styles.css
@@ -1,16 +1,20 @@
 .spinner {
   width: 80px;
   height: 80px;
-  
   margin: 10px auto;
-
   position: absolute;
-  top: 50%;
-  left: 46%;
-
+  top: 48%;
+  left: 44%;
   z-index: 100;
 }
 
+logo{
+  margin: 10px auto;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  z-index: 100;
+}
 
 
 .loading{
@@ -55,4 +59,93 @@
     transform: scale(1.0);
     -webkit-transform: scale(1.0);
   }
+}
+
+.bramhan {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    user-select: none;
+    cursor: default;
+    font-family: ubuntu;
+}
+
+
+.gradient {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: 1 !Important;
+}
+
+.galaxy{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2 !Important;
+    margin-top: 16px;
+}
+
+.no-padding{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.row{
+    width: 100%;
+}
+
+
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.center-div{
+    width: auto;
+    position: relative;
+    margin: auto auto;
+}
+
+.faint{
+    opacity: 0.7;
+}
+
+.error {
+  width: 90%;
+  color: rgba(20, 20, 20, 0.8);
+  text-align: center;
+  margin: 40px 20px 20px 20px;
+  position: absolute;
+  z-index: 100;
+}
+
+.error-icon{
+  font-size: 80px;
+  margin-bottom: 20px;
+  opacity: 0.66;
+  color: #eaa808;
+}
+
+.btn-solid{
+  background: rgba(40, 40, 40, 0.6);
+  border: 0px;
+  outline: 0px;
+  color: #EEE;
+  transition: 0.5s all ease-in;
+  margin-top: 26px;
+  margin-bottom: 20px;
+  padding: 6px 12px 6px 12px;
+  cursor: pointer;
+}
+
+.btn-solid:hover{
+  background: rgba(40, 40, 40, 0.9);
 }
