--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,66 +1,11 @@
 .test{
     border: 0px solid #f00;
 }
-
-
+s
 body{
     background-color: #f9fcff;
 }
 
-
-
-.bramhan {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    user-select: none;
-    cursor: default;
-    font-family: ubuntu;
-}
-
-
-.gradient {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    z-index: 1 !Important;
-}
-
-.galaxy{
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2 !Important;
-}
-
-.no-padding{
-    padding-left: 0;
-    padding-right: 0;
-}
-
 .row{
     width: 100%;
-}
-
-
-.container-full {
-  margin: 0 auto;
-  width: 100%;
-}
-
-.center-div{
-    width: auto;
-    position: relative;
-    margin: auto auto;
-}
-
-.faint{
-    opacity: 0.7;
 }
